--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<p>This page is about creating interactive graphs using Plotly.</p>
 	<p>Here are two example graphs:</p>
 	<ul>
-		<li><a href="linear_graph.html">Linear graph</a></li>
-		<li><a href="markers_graph.html">Markers graph</a></li>
+		<li><a href="https://tikhon-radkevich.github.io/PlotlyGraphs/line/">Linear graph</a></li>
+		<li><a href="https://tikhon-radkevich.github.io/PlotlyGraphs/marker/">Markers graph</a></li>
 	</ul>
 </body>
 </html>
