--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<ul>
 		<li><a href="https://tikhon-radkevich.github.io/PlotlyGraphs/line/">Linear graph</a></li>
 		<li><a href="https://tikhon-radkevich.github.io/PlotlyGraphs/marker/">Markers graph</a></li>
+		<li><a href="https://tikhon-radkevich.github.io/PlotlyGraphs/animate/">Animate graph</a></li>
 	</ul>
 </body>
 </html>
